<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="sirs.grupo7.securepayment.StartThird"
                android:background="#0099cc"
                android:orientation="vertical"
                android:weightSum="3">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_setup_completed"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/start_third_text"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_setup_completed2"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:id="@+id/start_third_text2"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_welcome_message3"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:id="@+id/start_third_text3"
        android:layout_weight="0.5"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_prev"
            android:id="@+id/button_start_third_prev"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_finish"
            android:id="@+id/button_start_third_next"
            android:layout_weight="0.1"/>
    </LinearLayout>

</LinearLayout>
