<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="sirs.grupo7.securepayment.StartFirst"
              android:background="#0099cc"
              android:orientation="vertical"
              android:weightSum="3">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_welcome_message"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_weight="0.4"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_welcome_message1"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_weight="0.4"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:src="@drawable/appicon"
        android:gravity="center"
        android:layout_weight="1.3" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_welcome_message2"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_weight="0.4"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ip"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button_start_first_next"
            android:layout_weight="0.1"/>
    </LinearLayout>

</LinearLayout>
