<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/buttonBalance"
        android:id="@+id/buttonTransaction"
        android:onClick="goToBalance"
        android:layout_below="@+id/textViewCurrentBalance"
        android:layout_marginTop="68dp"
        android:layout_alignEnd="@+id/textViewCurrentBalance"
        android:layout_alignStart="@+id/textViewCurrentBalance"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/buttonTransaction"
        android:id="@+id/buttonBalance"
        android:onClick="goToTransaction"
        android:layout_above="@+id/buttonShowIBAN"
        android:layout_marginBottom="58dp"
        android:layout_alignStart="@+id/buttonTransaction"
        android:layout_alignEnd="@+id/buttonTransaction"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/my_qrcode"
        android:id="@+id/buttonShowIBAN"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/buttonBalance"
        android:layout_alignStart="@+id/buttonBalance"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewCurrentBalance"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
</RelativeLayout>
