<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="sirs.grupo7.securepayment.StartSecond"
              android:background="#0099cc"
              android:orientation="vertical"
              android:weightSum="3">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/start_setup1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_weight="0.5"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:gravity="center"
        android:weightSum="1" >

        <EditText
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/iban_region"
            android:layout_weight="0.15"
            android:textSize="20sp"
            android:maxLength="2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/iban_numbers"
            android:layout_weight="0.85"
            android:textSize="20sp"
            android:maxLength="23" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="0.2"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.4"
        android:gravity="center"
        android:weightSum="1" >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/transaction_qrcode"
            android:id="@+id/transactionQRCode"
            android:layout_weight="0.6"
            android:layout_gravity="center"
            android:onClick="goToQRCode"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="0.9"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_prev"
            android:id="@+id/button_start_second_prev"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button_start_second_next"
            android:layout_weight="0.1"/>
    </LinearLayout>

</LinearLayout>
